--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,29 +8,37 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
 
+    - name: Install dependencies
+      run: | 
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-    build_and_push_to_docker_hub:
+
+build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        # Проверка доступности репозитория Docker Hub для workflow
+        uses: actions/checkout@v2 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to Docker
-        uses: docker/login-action@v1
+        # Вызов сборщика контейнеров docker
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        # Запуск скрипта авторизации на Docker Hub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v2
+       - name: Push to Docker Hub
+        # Пуш образа в Docker Hub 
+        uses: docker/build-push-action@v2 
         with:
           push: true
-          context: ./registration/
           tags: ${{ secrets.DOCKER_USERNAME }}/registration:latest
