--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          context: ./registration/
+          context: ./backend
           tags: ${{ secrets.DOCKER_USERNAME }}/registration:latest
