--- a/backend/registration/Dockerfile
+++ b/backend/registration/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY registration/ .
-CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
+CMD ["gunicorn", "registration.wsgi:application", "--bind", "0:8000" ]
