--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: install_requirements
+    if: github.ref == 'refs/heads/master'
+
+
     steps:
       - name: Check out the repo
         # Проверка доступности репозитория Docker Hub для workflow
@@ -40,6 +43,6 @@ jobs:
         # Пуш образа в Docker Hub 
         uses: docker/build-push-action@v2 
         with:
-          push: true
           context: ./backend
+          push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/registration:latest
